FIX: Footer player section and right section HTML semantics and some alignment improvments.

--- a/layouts.css
+++ b/layouts.css
@@ -1,3 +1,8 @@
+.center-wrapper {
+    padding: 0 16px;
+    margin: 0 auto;
+}
+
 .center__grid {
     display: grid;
     place-items: center;
