--- a/style.css
+++ b/style.css
@@ -189,10 +189,8 @@ input[type=range]::-webkit-slider-runnable-track  {
       font-weight: 600;
 }
 
-.footer__track-controls {
-      height: 60%;
-
-      margin-top: 8px;
+.footer__track-progress {
+      margin-bottom: 8px;
 }
 
 #play-btn {
